--- a/advanced-front-end-development-projects/javascript-calculator/style.css
+++ b/advanced-front-end-development-projects/javascript-calculator/style.css
@@ -1,67 +1,71 @@
 * {
   margin: 10px auto;
-  font-size: 20px;
 }
-
 body {
-  background-color: #464646;
-}
+  background-color: #202020;
+  font-family: 'Days One', sans-serif;
 
+}
 #output {
   background: #94AFB5;
-  width: 300px;
+  width: 400px;
   height: 70px;
   font-size: 50px;
   border-radius: 10px;
-  padding-right: 3px;
+  padding-right: 5px;
 }
-
 .calculator {
+  font-size: 25px;
+  position: relative;
   text-align: center;
-  width: 310px;
-  height: 460px;
+  width: 410px;
+  height: 520px;
   padding: 2px;
-  background: #ecf0f1;
+  background: #5591C3;
   border-radius: 15px;
   font-weight: bold;
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
 }
-
 button {
   margin: 2px;
-  width: 45px;
-  height: 45px;
-  background-color: #ABA9A9;
+  width: 85px;
+  height: 55px;
+  background-color: #084D87;
+  color: #D17900;
   border-radius: 10px;
   text-align: center;
   cursor: pointer;
   outline: none;
   border: none;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 5px #053C6A;
   padding: 5px;
+  vertical-align: top;
 }
-
-button:hover {
-  background-color: #464646
-}
-
 button:active {
-  background-color: #ABA9A9;
-  box-shadow: 0 5px #666;
+  background-color: #084D87;
+  box-shadow: 0 5px #053C6A;
   transform: translateY(4px);
 }
-
 #zero {
-  width: 100px;
+  width: 181px;
 }
-
 #ac, #ce {
   background-color: #EC0000;
+  box-shadow: 0 5px #BC0000;
+  color: #814B00;
 }
-
-#equals {
+.last-row {
   position: absolute;
-  height: 105px;
+  bottom: 16px;
+  left: 31px;
+}
+#equals {
+  height: 125px;
+  font-size: 45px;
+}
+.footer {
+  font-size: 10pt;
+  color: #D17900;
 }
