--- a/advanced-front-end-development-projects/javascript-calculator/style.css
+++ b/advanced-front-end-development-projects/javascript-calculator/style.css
@@ -6,12 +6,16 @@ body {
   font-family: 'Days One', sans-serif;
 
 }
-#output {
+#screen {
   background: #94AFB5;
   width: 400px;
-  height: 70px;
+  height: 100px;
   font-size: 50px;
   border-radius: 10px;
+  padding-right: 5px;
+}
+#history {
+  font-size: 12pt;
   padding-right: 5px;
 }
 .calculator {
@@ -19,12 +23,12 @@ body {
   position: relative;
   text-align: center;
   width: 410px;
-  height: 520px;
+  height: 550px;
   padding: 2px;
   background: #5591C3;
   border-radius: 15px;
   font-weight: bold;
-  margin-top: 5%;
+  margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
 }
