--- a/advanced-front-end-development-projects/pomodoro-clock/style.css
+++ b/advanced-front-end-development-projects/pomodoro-clock/style.css
@@ -3,17 +3,59 @@
   text-align: center;
 }
 body {
-  background-color: #202020;
+  background-color: #FFFABA;
   font-family: 'Days One', sans-serif;
-  color: #5591C3;
+  color: #1BA21B;
+  font-size: 2em;
 }
 h1 {
-  color: #D17900;
+  color: #E24848;
+  letter-spacing: 2px;
 }
 .footer {
   font-size: 10pt;
-  color: #D17900;
+}
+button {
+  color: #A40F0F;
+  background-color: white;
+  color: black;
+  border: 2px solid #1BA21B;
+  border-radius: 4px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+button:hover {
+    background-color: #1BA21B; /* Green */
+    color: white;
+}
+#question {
+  font-size: .6em;
+}
+a {
+  color: #E24848;
+}
+a:hover {
+  color: #1BA21B;
 }
 #time-left {
-  /* display:none; */
+  font-size: 50px;
+  color: #E24848;
+}
+#session-length {
+  color: #E24848;
+}
+#break-length {
+  color: #E24848;
+}
+#break-label {
+  letter-spacing: 2px;
+}
+#session-label {
+  letter-spacing: 2px;
+}
+#timer-label {
+  letter-spacing: 2px;
+}
+.col-xs-4 {
+  display: inline-block;
 }
