--- a/intermediate-front-end-development-projects/random-quote-generator/style.css
+++ b/intermediate-front-end-development-projects/random-quote-generator/style.css
@@ -1,9 +1,13 @@
 .googlefont {
+  margin-right: 25px;
   font-family: 'Pathway Gothic One', sans-serif;
 }
 
 body {
   background: url(http://i.imgur.com/RjATI2r.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -32,4 +36,8 @@ body {
   width:400px;
   position: absolute;
   right: 15px;
+}
+
+a {
+  text-decoration: none;
 }
